--- a/css/styles.css
+++ b/css/styles.css
@@ -57,8 +57,8 @@ h6 {
 
 .header {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 1px 6px rgba(46, 47, 66, 0.08);
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
     background: #fff;
     border-bottom: 1px solid #e7e9fc;
 }
@@ -67,12 +67,11 @@ h6 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
 }
 
 .header-menu-list,
 .contacts{
-display: none;
+    display: none;
 }
 
 .header-logo {
@@ -91,19 +90,21 @@ display: none;
     color: #2e2f42;
     font-family: "Raleway", sans-serif;
 }
+
 .burger-btn{
     padding: 0;
     background-color: transparent;
     border: none;
     cursor: pointer;
 }
+
 .burger-icon{
     display: block;
     fill: #2f2f37;
     
 }
-@media screen and (min-width: 768px){
 
+@media screen and (min-width: 768px){
 .burger-btn{
     display: none;
 }
@@ -180,8 +181,252 @@ display: none;
     }
     .header-contacts-link{
         padding: 24px 0;
-            font-size: 16px;
-            line-height: 1.5;
-            letter-spacing: 0.02em;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+}
+
+/*mobile-menu*/
+.mobile-menu {
+    background: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.menu-container {
+    position: relative;
+    padding-top: 72px;
+    padding-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.close-menu-button {cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    background-color: #fff;
+    border-color: #2e2f42;
+    right: 24px;
+    top: 24px;
+    border-radius: 50%;
+    stroke-width: 1px;
+    outline: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-button:hover,
+.close-button:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.mobile-menu-list{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 168px;
+    gap: 40px;
+}
+
+.mobile-menu-link{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.current{
+    color: #404bbf;
+}
+
+.mobile-contacts{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.mobile-contacnt-link{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.mobile-icons-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-top: 24px;
+}
+
+.mobile-social-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: #f4f4fd;
+}
+
+.icons-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icons-link:hover,
+.icons-link:focus {
+    background-color: #404BBF;
+}
+
+@media screen and (min-width:768px){
+    .mobile-menu{
+        display: none;
+    }
+}
+    
+
+
+/*main*/
+.main-section-button {
+    max-width: 320px;
+    margin: 0 auto;
+    background-color: #2e2f42;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: linear-gradient(
+            rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),
+        url(../images/main-mobile1x-min.jpg);
+        padding-top: 72px;
+        padding-bottom: 72px;
+}
+
+@media screen and (min-device-pixel-ratio: 2),
+screen and (min-resolution: 2dppx),
+screen and (min-resolution: 192dpi) {
+    .main-container {
+        background-image: linear-gradient
+        (rgba(17, 17, 17, 0.4),
+                rgba(17, 17, 17, 0.4)),
+            url(../images/main-mobile2x-min.jpg);
+    }
+}
+
+.title-main{
+    font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #fff;
+        margin: 0 auto;
+        margin-bottom: 72px;
+        max-width: 216px;
+        text-align: center;
+       
+}
+.button-main{
+    display: block;
+    margin: 0 auto;
+    border: none;
+    border-radius: 4px;
+    height: 56px;
+    min-width: 169px;
+    background-color: #4d5ae5;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    cursor: pointer;
+    padding: 16px 32px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-main:hover,
+.button-main:focus {
+    background-color: #404BBF;
+}
+
+@media screen and (min-width:768px){
+.main-section-button {
+    max-width: 768px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+        url(../images/main-tablet1x-min.jpg);
+        padding-top: 112px;
+        padding-bottom: 112px; 
+}
+         @media screen and (min-device-pixel-ratio: 2),
+         screen and (min-resolution: 2dppx),
+         screen and (min-resolution: 192dpi) {
+        .main-section-button {
+            background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+             rgba(46, 47, 66, 0.7)),
+             url(../images/main-tablet2x-min.jpg);
+             }
+            }
+    .title-main{
+        max-width: 496px;
+        margin-bottom: 36px;
+        font-size: 56px;
+        line-height: 1.07;
+    }
+}
+
+@media screen and (min-width:1158px) {
+    .main-section-button {
+        max-width: 1158px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/main-desktop1x-min.jpg);
+        padding-top: 112px;
+        padding-bottom: 112px;
+    }
+
+    @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 2dppx),
+    screen and (min-resolution: 192dpi) {
+        .main-section-button {
+            background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                    rgba(46, 47, 66, 0.7)),
+                url(../images/main-desktop2x-min.jpg);
+        }
+    }
+
+    .title-main {
+        max-width: 496px;
+        margin-bottom: 56px;
+        font-size: 56px;
+        margin-bottom: 48px;
     }
 }
