--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,19 @@ body {
     background-color: #FFFFFF;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
 .hidden{
     display: none;
 }
@@ -429,4 +442,212 @@ screen and (min-resolution: 192dpi) {
         font-size: 56px;
         margin-bottom: 48px;
     }
+}
+
+/*advanced2*/
+.advanced-icons{
+    display: none;
+}
+
+.section-advansed {
+    display: flex;
+}
+
+.advanced-container {
+    display: flex;
+    padding: 96px 16px 96px 16px;
+    width: 100%;
+}
+
+.main-list {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 72px;
+}
+
+.advanced-text {
+    width: 100%;
+    height: 120px;
+    
+}
+
+.main-list-advanced {
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
+}
+
+.main-advanced-item {
+    align-items: flex-start;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    font-weight: 500;
+}
+@media screen and (min-width:768px){
+    .main-list{
+        gap: 24px;
+    }
+    .advanced-text{
+        display: flex;
+        flex-wrap: wrap;
+        width: calc((100% - 24px) / 2);
+    }
+    .main-list-advanced {
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        margin-bottom: 8px;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+    }
+    .main-advanced-item {
+        align-items: flex-start;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+        font-weight: 500;
+        font-size: 16px;  
+    }
+}
+@media screen and (min-width:1158px){
+    .main-list {
+        display: flex;
+    }
+    .advanced-text {
+        width: calc((100% - 72px) / 4);
+    }
+    .advanced-icons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid #8e8f99;
+        border-radius: 4px;
+        width: 264px;
+        height: 112px;
+        background: #f4f4fd;
+        margin-bottom: 8px;
+    }
+    .main-list-advanced {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        }
+}
+
+/*cards3*/
+.section-cards {
+    background-color: #f4f4fd;
+    padding:96px 28px 96px 28px; 
+}
+
+.cards-container{
+padding-left: 0;
+padding-right: 0;
+width: 100%;
+}
+.main-list-title {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+    font-weight: 700;
+}
+.cards-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    row-gap: 72px;
+}
+
+.main-items-cards {
+    width: 264px;
+    background-color: #FFFFFF;
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.cards-text {
+    padding: 32px 0;
+}
+
+.main-list-name {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.main-list-item {
+    display: block;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #434455;
+    margin-bottom: 8px;
+    font-weight: 400;
+}
+
+.icons-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+
+.social-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: #f4f4fd;
+}
+
+.icons-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icons-link:hover,
+.icons-link:focus {
+    background-color: #404BBF;
+}
+
+@media screen and (min-width:768px) {
+    .section-cards {
+            padding: 96px 108px 96px 108px;
+    
+        }
+        .cards-list{
+            gap: 24px;
+        }
+}
+
+@media screen and (min-width:1158px) {
+.section-cards {
+        padding: 120px 156px 120px 156px;
+}
+.main-items-cards {
+    width: calc((100% - 72px) / 4);
+}
+
+
 }
