--- a/css/styles.css
+++ b/css/styles.css
@@ -539,6 +539,9 @@ screen and (min-resolution: 192dpi) {
         font-size: 20px;
         line-height: 1.2;
         }
+        .advanced-container{
+            margin-bottom: 120px;
+        }
 }
 
 /*cards3*/
@@ -547,11 +550,7 @@ screen and (min-resolution: 192dpi) {
     padding:96px 28px 96px 28px; 
 }
 
-.cards-container{
-padding-left: 0;
-padding-right: 0;
-width: 100%;
-}
+
 .main-list-title {
     font-size: 36px;
     line-height: 1.11;
@@ -566,7 +565,6 @@ width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    row-gap: 72px;
 }
 
 .main-items-cards {
@@ -638,6 +636,7 @@ width: 100%;
         }
         .cards-list{
             gap: 24px;
+            justify-content: center;
         }
 }
 
@@ -649,5 +648,157 @@ width: 100%;
     width: calc((100% - 72px) / 4);
 }
 
+.cards-container{
+    max-width: 1158px;
+}
+}
 
+/*portfolio*/
+
+
+
+/*footer*/
+.footer {
+    background-color: #2e2f42;
+    padding: 96px 16px;
+}
+
+.footer-logo-subtitle {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 72px;
+}
+
+.footer-logo {
+    display: inline-block;
+    align-items: center;
+    margin-bottom: 16px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    font-family: "Raleway", sans-serif;
+}
+
+.footer-logo-blue {
+    color: #f4f4fd;
+}
+
+.footer-subtitle {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    max-width: 288px;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.footer-socail-link{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center; 
+    justify-content: center;
+    margin-bottom: 72px;
+}
+.title-media {
+    display: flex;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+}
+
+.footer-icons-links {
+    gap: 16px;
+}
+
+.icons-link-footer {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-radius: 50%;
+}
+
+.icons-link-footer:focus {
+    background-color: #31d0aa;
+}
+
+.icons-link-footer:hover {
+    background-color: #31d0aa;
+}
+.footer-subscribe{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.subscribe-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+}
+
+.subscribe-input {
+border: 1px solid #fff;
+border-radius: 4px;
+width: 264px;
+height: 40px;
+box-shadow: 0 4px 4px 0 
+rgba(0, 0, 0, 0.15);
+font-weight: 400;
+font-size: 12px;
+line-height: 2;
+letter-spacing: 0.04em;
+color: #fff;
+padding-top: 8px;
+padding-bottom: 8px;
+padding-left: 16px;
+background-color:transparent;
+}
+.subscribe-input::placeholder{
+color: #fff;
+}
+
+.btn-subscribe {
+    margin: 0 auto;
+    margin-top: 16px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    border-radius: 4px;
+    padding: 8px 24px;
+    min-width: 165px;
+    height: 40px;
+    background: #4d5ae5;
+    color: #fff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+}
+
+.btn-subscribe:hover,
+.btn-subscribe:focus {
+    background-color: #31d0aa;
+}
+
+.subscribe-icon {
+    margin-left: 16px;
+    fill: #FFFFFF
 }
