--- a/css/styles.css
+++ b/css/styles.css
@@ -731,6 +731,7 @@ screen and (min-resolution: 192dpi) {
 .icons-link-footer:hover {
     background-color: #31d0aa;
 }
+
 .footer-subscribe{
     display: flex;
     flex-wrap: wrap;
@@ -746,32 +747,31 @@ screen and (min-resolution: 192dpi) {
     color: #fff;
     margin-bottom: 16px;
 }
-
 .subscribe-input {
-border: 1px solid #fff;
-border-radius: 4px;
-width: 264px;
-height: 40px;
-box-shadow: 0 4px 4px 0 
-rgba(0, 0, 0, 0.15);
-font-weight: 400;
-font-size: 12px;
-line-height: 2;
-letter-spacing: 0.04em;
-color: #fff;
-padding-top: 8px;
-padding-bottom: 8px;
-padding-left: 16px;
-background-color:transparent;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 
+    rgba(0, 0, 0, 0.15);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    background-color:transparent;
 }
+
 .subscribe-input::placeholder{
-color: #fff;
+    color: #fff;
 }
 
 .btn-subscribe {
     margin: 0 auto;
     margin-top: 16px;
-    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -801,4 +801,283 @@ color: #fff;
 .subscribe-icon {
     margin-left: 16px;
     fill: #FFFFFF
+}
+
+@media screen and (min-width:768px) {
+    .footer{ 
+        padding-top: 96px;
+        padding-left: 108px;
+        padding-bottom: 96px;
+    }
+    .footer-logo-container{
+        display: flex;
+        gap: 16px;
+    }
+    .web-social{
+        display: flex;
+        gap: 24px;
+    }
+    .footer-logo-subtitle{
+        display: inline-block;
+        justify-content: start;
+    }
+    .footer-socail-link{
+        display: inline-block;
+    }
+    .footer-subscribe {
+        display: block;
+    }
+    .form-sbs {
+        display: flex;
+        gap: 24px;
+    }
+    .btn-subscribe{
+        margin-top: 0;
+    }
+}
+
+@media screen and (min-width:1158px){
+.footer {
+        background-color: #2e2f42;
+        padding: 100px 0;
+    }
+
+    .footer-logo-subtitle {
+        margin-right: 120px;
+    }
+
+    .footer-container {
+        display: flex;
+    }
+    .footer-subscribe {
+        margin-left: auto;
+    }
+}
+
+/*modal*/
+.modal{
+    display: none;
+}
+@media screen and (min-width:1158px){
+.modal {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: #fcfcfc;
+    border-radius: 4px;
+    width: 408px;
+    min-height: 584px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    background: #fcfcfc;
+    transform: translate(-50%, -50%);
+    padding: 72px 24px 24px 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-overley:not(is-open) .modal {
+    transform: translate(-50%, -100%);
+}
+
+.close-button {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    background-color: #e7e9fc;
+    border-color: #2e2f42;
+    right: 24px;
+    top: 24px;
+    border-radius: 50%;
+    stroke-width: 1px;
+    outline: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-button:hover,
+.close-button:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.close-icon {
+    fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-button:hover .close-icon,
+.close-button:focus .close-icon {
+    fill: #FFFFFF;
+}
+
+.name-form {
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 16px;
+}
+
+.label-input {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: block;
+    margin-bottom: 4px;
+}
+
+.container-input {
+    margin-bottom: 8px;
+}
+
+.form-input {
+    border-radius: 4px;
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    padding-left: 38px;
+    outline: transparent;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #1e1823;
+}
+
+.form-input:focus {
+    border-color: #4d5ae5;
+}
+
+.form-input:focus+.form-icon {
+    fill: #4d5ae5;
+}
+
+.input-wrapper {
+    position: relative;
+}
+
+.form-icon {
+    position: absolute;
+    fill: #2e2f42;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-comment {
+    margin-bottom: 16px;
+}
+
+.input-comment {
+    border-radius: 4px;
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    padding-top: 8px;
+    padding-left: 16px;
+    outline: transparent;
+    resize: none;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    padding: 8px 16px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.input-comment:focus {
+    border-color: #4d5ae5;
+    color: #1e1823;
+}
+
+.checkbox-container {
+    margin-bottom: 24px;
+}
+
+.checkbox-svg {
+    border-radius: 2px;
+    fill: #404bbf;
+    border: 1px solid #404bbf;
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+}
+
+.label-check {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    gap: 8px;
+
+}
+
+.label-check span {
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-checkbox:checked+.label-check span {
+    background-color: #404bbf;
+    border: none;
+    fill: #f4f4fd;
+}
+
+.span-privacy {
+    margin-right: 8px;
+}
+
+.privacy {
+    line-height: 1.33;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+}
+
+.btn-modal {
+    display: block;
+    border-radius: 4px;
+    padding: 16px 32px;
+    min-width: 169px;
+    height: 56px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #4d5ae5;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 24px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+btn-modal:hover,
+.btn-modal:focus {
+    background-color: #404BBF;
+    }
 }
